# rust-rocket-react

./: README.md
client/: .env  Dockerfile  package.json
client/public/: index.html  manifest.json
client/src/: App.css  App.test.tsx  App.tsx  Card.d.ts  NewPuppy.d.ts  Owner.d.ts  OwnerWithPuppy.d.ts  Puppy.d.ts  Theme.ts  index.css  index.tsx
client/src/components/: CardList.tsx  FloatingCard.tsx  NewPuppyForm.tsx  Puppies.tsx  PuppiesTable.tsx  PuppyListItem.tsx
client/src/constants/: Puppies.ts  cards.ts
client/src/services/: OwnersService.ts  (+1 more)
dotnet-server/: DieselSchemaMigrations.cs  Program.cs  PuppiesContext.cs  Startup.cs  appsettings.Development.json  appsettings.json  dotnet-server.csproj
dotnet-server/Controllers/: OwnersController.cs  PuppiesController.cs
dotnet-server/Database/: IOwnersRepository.cs  IPuppiesRepository.cs  OwnersRepository.cs  PuppiesRepository.cs
dotnet-server/Models/: Owner.cs  Puppy.cs
dotnet-server/Properties/: launchSettings.json
server/: .env  Cargo.toml  Dockerfile
server/migrations/2020-08-30-004404_create_puppies/: down.sql  up.sql
server/migrations/2020-09-02-231540_add_puppy_age/: down.sql  up.sql
server/migrations/2020-09-06-004917_create_owners/: down.sql  up.sql
server/src/: config.rs  lib.rs  models.rs  schema.rs
server/src/db/: mod.rs  owners.rs  puppies.rs
server/src/logic/: mod.rs  owners.rs  puppies.rs
server/src/middleware/: puppies.rs
server/src/models/: mod.rs  owner.rs  puppy.rs
server/src/routes/: mod.rs  owners.rs  puppies.rs
server/tests/: common.rs  owners.rs  puppies.rs
