[package]
default-run="main"
name = "rust_web_app"
version = "0.1.0"
authors = ["Liam Neville <lneville@quantumscape.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
rocket = "0.4.5"
rocket_cors = "0.5.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
typescript-definitions = "0.1.10"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "diesel_postgres_pool"]

[dev-dependencies]
once_cell = "1.4.1"